trunk/Archive2/3c/f49423a0d67d49/main.cpp
template <typename... Ts>
void foo(Ts..., int) {}

int main() {

    foo(42.f, 4);
}